--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   - gcc --version
   - arm-none-eabi-gcc --version
   - python3 --version
-  - sudo apt-get install -y python3-pip
+  - sudo apt-get install -y python3-pip setuptools
   - pip3 install --user adafruit-nrfutil
 
 script:
