--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ before_script:
   - gcc --version
   - arm-none-eabi-gcc --version
   - python3 --version
-  - sudo apt-get install -y python3-pip
-  - pip3 install --user adafruit-nrfutil
+  - python --version
+  - pip install --user adafruit-nrfutil
 
 script:
   - python3 tools/build_all.py
