--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -18,6 +18,7 @@ jobs:
       
     - name: Install Toolchains
       run: |
+        pip3 install adafruit-nrfutil
         npm install --global xpm
         xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@latest
         echo "::add-path::`echo $HOME/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/*/.content/bin`"
@@ -30,8 +31,8 @@ jobs:
       run: |
         auth_header="$(git config --local --get http.https://github.com/.extraheader)"
         git submodule sync --recursive
-        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth = 1
     
     - name: Build
-      run: python3 tools/build_all.py
+      run: make BOARD=pca10056 V=1 all
       #run: python3 tools/build_all.py ${{ matrix.example }}
