--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -29,5 +29,5 @@ jobs:
         submodules: true
     
     - name: Build
-      run: make BOARD=pca10056 V=1 all
+      run: python3 tools/build_all.py
       #run: python3 tools/build_all.py ${{ matrix.example }}
