--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -19,6 +19,8 @@ jobs:
     - name: Install Toolchains
       run: |
         pip3 install adafruit-nrfutil
+        (wget https://www.nordicsemi.com/api/sitecore/Products/DownloadPlatform --post-data=fileid=8F19D314130548209E75EFFADD9348DB -O cli-tools.tar && tar -xv -f cli-tools.tar && mv mergehex mergehex_all && mv mergehex_all/mergehex .)
+        echo "::add-path::."
         npm install --global xpm
         xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@latest
         echo "::add-path::`echo $HOME/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/*/.content/bin`"
