--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -19,7 +19,11 @@ jobs:
     - name: Install Toolchains
       run: |
         pip3 install adafruit-nrfutil
-        (wget https://www.nordicsemi.com/api/sitecore/Products/DownloadPlatform --post-data=fileid=8F19D314130548209E75EFFADD9348DB -O cli-tools.tar && tar -xv -f cli-tools.tar && mv mergehex mergehex_all && mv mergehex_all/mergehex .)
+        wget https://www.nordicsemi.com/api/sitecore/Products/DownloadPlatform --post-data=fileid=8F19D314130548209E75EFFADD9348DB -O cli-tools.tar
+        tar -xv -f cli-tools.tar
+        echo $pwd
+        echo `pwd`
+        echo $GITHUB_WORKSPACE
         echo "::add-path::."
         npm install --global xpm
         xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@latest
