--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -21,10 +21,7 @@ jobs:
         pip3 install adafruit-nrfutil
         wget https://www.nordicsemi.com/api/sitecore/Products/DownloadPlatform --post-data=fileid=8F19D314130548209E75EFFADD9348DB -O cli-tools.tar
         tar -xv -f cli-tools.tar
-        echo $pwd
-        echo `pwd`
-        echo $GITHUB_WORKSPACE
-        echo "::add-path::."
+        echo "::add-path::$GITHUB_WORKSPACE/mergehex"
         npm install --global xpm
         xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@latest
         echo "::add-path::`echo $HOME/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/*/.content/bin`"
