Add board definition files for ARAMCON 2 Badge

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -27,6 +27,7 @@ jobs:
           - 'adm_b_nrf52840_1'
           - 'ae_bl652_bo'
           - 'aramcon_badge_2019'
+          - 'aramcon2_badge'
           - 'arcade_feather_nrf52840_express'
           - 'arduino_nano_33_ble'
           - 'bast_ble'
