--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ bin/
 TAGS
 
 .DS_Store
+
+# Ignore S340 SoftDevice due to license restrictions
+bootloader/feather_nrf52840_express/feather_nrf52840_express_bootloader-*_s340_6.1.1.*
+cores/nRF5/nordic/softdevice/s340_nrf52_6.1.1_API/*
