--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ bin/
 *.jlink
 
 TAGS
+# Ignore S340 SoftDevice due to license restrictions
+bootloader/feather_nrf52840_express/feather_nrf52840_express_bootloader-0.3.0_s340_6.1.1.*
+cores/nRF5/nordic/softdevice/s340_nrf52_6.1.1_API/*
