update tinyusb submodule to 0.6.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "tinyusb"]
+[submodule "lib/tinyusb"]
 	path = lib/tinyusb
 	url = https://github.com/hathach/tinyusb.git
 [submodule "lib/nrfx"]
