try to allow new bootloader with different size than current one
however, due to the design of MBR, the SD_MBR_COMMAND_COPY_BL prioritize
its internal flash location MBR_BOOTLOADER_ADDR, we won't be able to
change bootloader starting address to increase its size

--- a/.gitignore
+++ b/.gitignore
@@ -51,10 +51,11 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-src/segger/Output
-_build-*/
+segger/Output
+_build/
 bin/
 *.emSession
 *.jlink
+.idea/
 
 TAGS
