--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/uf2"]
 	path = lib/uf2
 	url = https://github.com/microsoft/uf2.git
+[submodule "lib/intelhex"]
+	path = lib/intelhex
+	url = https://github.com/python-intelhex/intelhex.git
