--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -25,7 +25,9 @@ jobs:
       run: |
         pip3 install adafruit-nrfutil uritemplate requests intelhex
         npm install --global xpm
-        xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@latest
+        # 9.3.1-1.2.1 is xpack modified version which significantly increased compiled size to 6-7KB and cause flash overflow.
+        # Skip this version for now, we will try again with next official release from ARM
+        xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@9.3.1-1.1.1
         echo "::add-path::`echo $HOME/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/*/.content/bin`"
     
     - name: Build
