fix ci with python 3.8
python 3.9 has issue with intelhex (issue 45)

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -11,7 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
+      with:
+        # 3.9 has issue with intelhex https://github.com/python-intelhex/intelhex/issues/45
+        python-version: '3.8'
 
     - name: Setup Node.js
       uses: actions/setup-node@v1.1.0
