looking for arm-none-eabi-gcc

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -31,7 +31,8 @@ jobs:
         # 9.3.1-1.2.1 is xpack modified version which significantly increased compiled size to 6-7KB and cause flash overflow.
         # Skip this version for now, we will try again with next official release from ARM
         xpm install --global @xpack-dev-tools/arm-none-eabi-gcc@9.3.1-1.1.1
-        echo "/home/runner/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/*/.content/bin" >> $GITHUB_PATH
+        whereis arm-none-eabi-gcc
+        echo "/home/runner/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/9.3.1-1.1.1/.content/bin" >> $GITHUB_PATH
     
     - name: Build
       run: python3 tools/build_all.py
