add upload artifacts and release assets to ci

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -69,13 +69,28 @@ jobs:
         echo `echo $HOME/opt/xPacks/@xpack-dev-tools/arm-none-eabi-gcc/*/.content/bin` >> $GITHUB_PATH
     
     - name: Build
-      run: make BOARD=${{ matrix.board }}
+      run: |
+        make BOARD=${{ matrix.board }} all
+        make BOARD=${{ matrix.board }} copy-artifact
       
+    - uses: actions/upload-artifact@v2
+      with:
+        name: ${{ matrix.board }}
+        path: _bin/${{ matrix.board }}
+
+    - name: Creat Release Asset
+      if: ${{ github.event_name == 'release' }}
+      run: zip -jr ${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}.zip _bin/${{ matrix.board }}
+
     - name: Upload Release Asset
-      if: github.event_name == 'release' && (github.event.action == 'published' || github.event.action == 'rerequested')
-      working-directory: tools
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
       env:
-        UPLOAD_URL: ${{ github.event.release.upload_url }}
-        ADABOT_GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: "[ -z \"$ADABOT_GITHUB_ACCESS_TOKEN\" ] || python3 -u upload_release_files.py"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: ${{ github.event_name == 'release' }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: ${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}.zip
+        asset_name: ${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}.zip
+        asset_content_type: application/zip
       
