--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -78,12 +78,11 @@ jobs:
         name: ${{ matrix.board }}
         path: _bin/${{ matrix.board }}
 
-    - name: Creat Release Asset
+    - name: Create Release Asset
       if: ${{ github.event_name == 'release' }}
       run: zip -jr ${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}.zip _bin/${{ matrix.board }}
 
     - name: Upload Release Asset
-      id: upload-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -94,3 +93,13 @@ jobs:
         asset_name: ${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}.zip
         asset_content_type: application/zip
       
+    - name: Upload Release Asset for Self-Update
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      if: ${{ github.event_name == 'release' }}
+      with:
+        upload_url: ${{ github.event.release.upload_url }}
+        asset_path: _bin/${{ matrix.board }}/update-${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}_nosd.uf2
+        asset_name: update-${{ matrix.board }}_bootloader-${{ github.event.release.tag_name }}_nosd.uf2
+        asset_content_type: application/x-binary
