--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -39,6 +39,7 @@ jobs:
           - 'mdk_nrf52840_dongle'
           - 'nice_nano'
           - 'nrf52840_m2'
+          - 'nrf52840_bboard'
           - 'ohs2020_badge'
           - 'particle_argon'
           - 'particle_boron'
