add makerdiary m60 keyboard to ci

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -36,6 +36,7 @@ jobs:
           - 'ebyte_e73_tbb'
           - 'electronut_labs_papyr'
           - 'ikigaisense_vita'
+          - 'm60_keyboard'
           - 'mdk_nrf52840_dongle'
           - 'nice_nano'
           - 'nrf52840_m2'
