--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -32,6 +32,7 @@ jobs:
           - 'arcade_feather_nrf52840_express'
           - 'arduino_nano_33_ble'
           - 'bast_ble'
+          - 'bluemicro_nrf52833'
           - 'bluemicro_nrf52840'
           - 'ebyte_e104_bt5032a'
           - 'ebyte_e73_tbb'
