git describe has issue with checkoutv2, back to v1

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -61,20 +61,20 @@ jobs:
       uses: actions/setup-node@v1
       
     - name: Checkout Code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
       with:
         submodules: true
 
-    #- name: Checkout linkermap
-    #  uses: actions/checkout@v2
-    #  with:
-    #     repository: hathach/linkermap
-    #     path: linkermap
+    - name: Checkout linkermap
+      uses: actions/checkout@v2
+      with:
+         repository: hathach/linkermap
+         path: linkermap
         
     - name: Install Toolchains
       run: |
         pip3 install adafruit-nrfutil uritemplate requests intelhex
-        #pip3 install linkermap/
+        pip3 install linkermap/
         npm install --global xpm
         # 9.3.1-1.2.1 is xpack modified version which significantly increased compiled size to 6-7KB and cause flash overflow.
         # Skip this version for now, we will try again with next official release from ARM
