Add mikoto to workflow

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -40,6 +40,7 @@ jobs:
           - 'ikigaisense_vita'
           - 'm60_keyboard'
           - 'mdk_nrf52840_dongle'
+          - 'mikoto'
           - 'nice_nano'
           - 'nrf52840_m2'
           - 'ohs2020_badge'
