--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -21,6 +21,7 @@ jobs:
           - 'feather_nrf52832'
           - 'feather_nrf52833_express'
           - 'feather_nrf52840_express'
+          - 'feather_nrf52840_tft'
           - 'feather_nrf52840_sense'
           - 'itsybitsy_nrf52840_express'
           - 'metro_nrf52840_express'
@@ -67,13 +68,13 @@ jobs:
       uses: actions/setup-python@v3
 
     - name: Checkout Code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
         submodules: true
 
     - name: Checkout linkermap
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
          repository: hathach/linkermap
          path: linkermap
