rename to feather sense tft

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -21,8 +21,8 @@ jobs:
           - 'feather_nrf52832'
           - 'feather_nrf52833_express'
           - 'feather_nrf52840_express'
-          - 'feather_nrf52840_tft'
           - 'feather_nrf52840_sense'
+          - 'feather_nrf52840_sense_tft'
           - 'itsybitsy_nrf52840_express'
           - 'metro_nrf52840_express'
           - 'ledglasses_nrf52840'
