--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,6 @@ set(TUSB ${CMAKE_CURRENT_LIST_DIR}/lib/tinyusb/src)
 #-------------------
 set(CMAKE_EXECUTABLE_SUFFIX .elf)
 add_executable(bootloader)
-#set_target_properties(bootloader PROPERTIES OUTPUT_NAME "${BOARD}_bootloader.elf")
-
 
 # SD_VERSION can be overwritten by board.cmake
 if(NOT DEFINED SD_VERSION)
@@ -51,6 +49,8 @@ target_sources(bootloader PUBLIC
   src/dfu_init.c
   src/flash_nrf5x.c
   src/main.c
+  src/screen.c
+  src/images.c
   src/boards/boards.c
   # nrfx
   ${NRFX}/drivers/src/nrfx_power.c
@@ -112,10 +112,29 @@ target_include_directories(bootloader PUBLIC
   ${SOFTDEVICE}/mbr/headers
   )
 
+# Debug option
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   # TODO not work yet, also need to add segger rtt, DFU_APP_DATA_RESERVED=0, BOOTLOADER_REGION_START=0xED000
   set(LD_FILE ${CMAKE_CURRENT_LIST_DIR}/linker/${MCU_VARIANT}_debug.ld)
-  message(FATAL_ERROR "Debug build not supported yet")
+
+  target_sources(bootloader PUBLIC
+    lib/SEGGER_RTT/RTT/SEGGER_RTT.c
+    )
+  target_include_directories(bootloader PUBLIC
+    lib/SEGGER_RTT/RTT
+    )
+
+  target_compile_definitions(bootloader PUBLIC
+    CFG_DEBUG
+    SEGGER_RTT_MODE_DEFAULT=SEGGER_RTT_MODE_BLOCK_IF_FIFO_FULL
+    DFU_APP_DATA_RESERVED=0
+    )
+
+  if (MCU_VARIANT STREQUAL "nrf52840")
+    target_compile_definitions(bootloader PUBLIC BOOTLOADER_REGION_START=0xEA000)
+  else ()
+    target_compile_definitions(bootloader PUBLIC BOOTLOADER_REGION_START=0x6D000)
+  endif ()
 else ()
   set(LD_FILE ${CMAKE_CURRENT_LIST_DIR}/linker/${MCU_VARIANT}.ld)
 endif ()
@@ -123,8 +142,7 @@ endif ()
 target_link_options(bootloader PUBLIC
   "LINKER:--script=${LD_FILE}"
   -L${NRFX}/mdk
-  --specs=nosys.specs
-  --specs=nano.specs
+  --specs=nosys.specs --specs=nano.specs
   )
 target_compile_options(bootloader PUBLIC
   -fno-builtin
@@ -149,7 +167,6 @@ target_compile_options(bootloader PUBLIC
   )
 target_compile_definitions(bootloader PUBLIC
   SOFTDEVICE_PRESENT
-  DFU_APP_DATA_RESERVED=7*4096
   )
 
 if (TRACE_ETM STREQUAL "1")
@@ -195,6 +212,7 @@ endif ()
 if (MCU_VARIANT STREQUAL "nrf52")
   set(SD_NAME s132)
   set(DFU_DEV_REV 0xADAF)
+  set(DFU_APP_DATA_RESERVED 7*4096)
   target_compile_definitions(bootloader PUBLIC
     NRF52
     NRF52832_XXAA
@@ -207,6 +225,7 @@ if (MCU_VARIANT STREQUAL "nrf52")
 elseif (MCU_VARIANT STREQUAL "nrf52833")
   set(SD_NAME s140)
   set(DFU_DEV_REV 52833)
+  set(DFU_APP_DATA_RESERVED 7*4096)
   target_compile_definitions(bootloader PUBLIC
     NRF52833_XXAA
     S140
@@ -218,6 +237,8 @@ elseif (MCU_VARIANT STREQUAL "nrf52833")
 elseif (MCU_VARIANT STREQUAL "nrf52840")
   set(SD_NAME s140)
   set(DFU_DEV_REV 52840)
+  # App reserved 40KB (8+32) to match circuitpython for 840
+  set(DFU_APP_DATA_RESERVED 10*4096)
   target_compile_definitions(bootloader PUBLIC
     NRF52840_XXAA
     S140
@@ -232,6 +253,10 @@ endif ()
 
 set(SD_FILENAME ${SD_NAME}_nrf52_${SD_VERSION})
 set(SD_HEX ${SOFTDEVICE}/${SD_FILENAME}/${SD_FILENAME}_softdevice.hex)
+
+if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+  target_compile_definitions(bootloader PUBLIC DFU_APP_DATA_RESERVED=${DFU_APP_DATA_RESERVED})
+endif ()
 
 #----------------------------------
 # Get UF2 version from git
@@ -257,11 +282,11 @@ math(EXPR MK_BOOTLOADER_VERSION "(${RELEASE_VERSION_MAJOR} << 16) + (${RELEASE_V
 cmake_print_variables(GIT_VERSION GIT_SUBMODULE_VERSIONS MK_BOOTLOADER_VERSION)
 
 target_compile_definitions(bootloader PUBLIC
+  UF2_VERSION_BASE="${GIT_VERSION}"
   UF2_VERSION="${GIT_VERSION} - ${GIT_SUBMODULE_VERSIONS}"
   BLEDIS_FW_VERSION="${GIT_VERSION} ${SD_NAME} ${SD_VERSION}"
   MK_BOOTLOADER_VERSION=${MK_BOOTLOADER_VERSION}
   )
-
 
 #----------------------------------
 # Post build
