added wiscore_rak4631 to ci

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -60,6 +60,7 @@ jobs:
           - 'raytac_mdbt50q_rx'
           - 'sparkfun_nrf52840_micromod'
           - 'waveshare_nrf52840_eval'
+          - 'wiscore_rak4631'
           - 'xiao_nrf52840_ble'
           - 'xiao_nrf52840_ble_sense'
                     
