--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Install ARM GCC
       uses: carlosperate/arm-none-eabi-gcc-action@v1
       with:
-        release: '10-2020-q4'
+        release: '12.3.Rel1'
 
     - name: Install Tools
       run: |
