--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -66,6 +66,8 @@ jobs:
     steps:
     - name: Setup Python
       uses: actions/setup-python@v5
+      with:
+        python-version: '3.x'
 
     - name: Checkout Code
       uses: actions/checkout@v4
