revert fetch-depth 0

--- a/.github/workflows/githubci.yml
+++ b/.github/workflows/githubci.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
       with:
-        fetch-tags: true
+        fetch-depth: 0
         submodules: true
 
     - name: Install ARM GCC
