set CMAKE_BUILD_TYPE to MinSizeRel if not defined instead of forcing -Os add CONFIG_GPIO_AS_PINRESET

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ set(TINYUSB_DIR ${CMAKE_CURRENT_LIST_DIR}/lib/tinyusb/src)
 set(UF2CONV_PY ${CMAKE_CURRENT_LIST_DIR}/lib/uf2/utils/uf2conv.py)
 set(UF2_FAMILY_ID_BOOTLOADER 0xd663823c)
 
+if (NOT DEFINED CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
+  set(CMAKE_BUILD_TYPE MinSizeRel CACHE STRING "Build type" FORCE)
+endif ()
+
 #-------------------
 # Bootloader
 #-------------------
@@ -131,7 +135,6 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   target_include_directories(bootloader PUBLIC
     lib/SEGGER_RTT/RTT
     )
-
   target_compile_definitions(bootloader PUBLIC
     CFG_DEBUG
     SEGGER_RTT_MODE_DEFAULT=SEGGER_RTT_MODE_BLOCK_IF_FIFO_FULL
@@ -170,12 +173,12 @@ target_compile_options(bootloader PUBLIC
   -Wmissing-format-attribute
   -Wno-endif-labels
   -Wunreachable-code
-  -Os
   # Suppress warning caused by SDK
   -Wno-unused-parameter -Wno-expansion-to-defined -Wno-array-bounds
   )
 target_compile_definitions(bootloader PUBLIC
   SOFTDEVICE_PRESENT
+  CONFIG_GPIO_AS_PINRESET
   )
 
 if (TRACE_ETM STREQUAL "1")
@@ -335,3 +338,10 @@ add_custom_target(flash-mbr
 add_custom_target(flash-erase
   COMMAND ${NRFJPROG} -f nrf52 --eraseall
   )
+
+# flash skip crc magic ( app valid = 0x0001, crc = 0x0000 )
+#add_custom_target(flash-skip-crc
+#  #COMMAND ${NRFJPROG} --memwr $(BOOT_SETTING_ADDR) --val 0x00000001 -f nrf52
+#  COMMAND ${NRFJPROG} --memwr 0xFF000 --val 0x00000001 -f nrf52
+#  #COMMAND ${NRFJPROG} --memwr 0x7F000 --val 0x00000001 -f nrf52
+#  )
