update makefile/cmake for softdevice macro. Remove the _s340 filter in ci

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,46 +225,28 @@ if (MCU_VARIANT STREQUAL "nrf52")
   set(SD_NAME s132)
   set(DFU_DEV_REV 0xADAF)
   set(DFU_APP_DATA_RESERVED 7*4096)
-  target_compile_definitions(bootloader PUBLIC
-    NRF52
-    NRF52832_XXAA
-    S132
-    )
+  target_compile_definitions(bootloader PUBLIC NRF52 NRF52832_XXAA)
 elseif (MCU_VARIANT STREQUAL "nrf52833")
   set(DFU_DEV_REV 52833)
   set(DFU_APP_DATA_RESERVED 7*4096)
-  if (SD_NAME STREQUAL "s340")
-    target_compile_definitions(bootloader PUBLIC
-      NRF52833_XXAA
-      S340
-      )
-  else ()
+  target_compile_definitions(bootloader PUBLIC NRF52833_XXAA)
+  if (NOT DEFINED SD_NAME)
     set(SD_NAME s140)
-    target_compile_definitions(bootloader PUBLIC
-      NRF52833_XXAA
-      S140
-      )
   endif ()
 elseif (MCU_VARIANT STREQUAL "nrf52840")
   set(DFU_DEV_REV 52840)
   # App reserved 40KB (8+32) to match circuitpython for 840
   set(DFU_APP_DATA_RESERVED 10*4096)
-  if (SD_NAME STREQUAL "s340")
-    target_compile_definitions(bootloader PUBLIC
-      NRF52840_XXAA
-      S340
-      )
-  else ()
+  target_compile_definitions(bootloader PUBLIC NRF52840_XXAA)
+  if (NOT DEFINED SD_NAME)
     set(SD_NAME s140)
-    target_compile_definitions(bootloader PUBLIC
-      NRF52840_XXAA
-      S140
-      )
   endif ()
-
 else ()
   message(FATAL_ERROR "MCU_VARIANT ${MCU_VARIANT} is unknown")
 endif ()
+
+string(TOUPPER ${SD_NAME} SD_NAME_UPPER)
+target_compile_definitions(bootloader PUBLIC ${SD_NAME_UPPER})
 
 set(SD_FILENAME ${SD_NAME}_nrf52_${SD_VERSION})
 set(SD_HEX ${SOFTDEVICE_DIR}/${SD_FILENAME}/${SD_FILENAME}_softdevice.hex)
